--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <caption>SỞ THÍCH CỦA BẠN</caption>
         <tr>
             <td style="text-align: right; color: blue;">Họ và tên</td>
-            <td><input type="text" name="name" size="30"></td>
+            <td><input type="text" name="yourname" size="30"></td>
         </tr>
         <tr>
             <td style="text-align: right; color: blue;">Email</td>
@@ -25,21 +25,21 @@
             <td style="color: red;">
                 <table>
                     <tr>
-                        <td class="luachon"><input type="checkbox">Thể thao </td>
-                        <td class="luachon"><input type="checkbox">Âm nhạc </td>
-                        <td class="luachon"><input type="checkbox">Đọc sách </td>
+                        <td class="hobby"><input type="checkbox">Thể thao </td>
+                        <td class="hobby"><input type="checkbox">Âm nhạc </td>
+                        <td class="hobby"><input type="checkbox">Đọc sách </td>
                     </tr>
                     <tr>
-                        <td class="luachon"><input type="checkbox">Lướt web </td>
-                        <td class="luachon"><input type="checkbox">Chơi game </td>
-                        <td class="luachon"><input type="checkbox">Điện ảnh </td>
+                        <td class="hobby"><input type="checkbox">Lướt web </td>
+                        <td class="hobby"><input type="checkbox">Chơi game </td>
+                        <td class="hobby"><input type="checkbox">Điện ảnh </td>
                     </tr>
                     <tr>
-                        <td class="luachon"><input type="checkbox">Du lịch </td>
+                        <td class="hobby"><input type="checkbox">Du lịch </td>
                     </tr>
                     <tr>
-                        <td><input type="submit" value="Gửi thông tin"></td>
-                        <td><input type="reset" value="Nhập lại"</td>
+                        <td><input type="submit" name="Submit Form" value="Gửi thông tin"></td>
+                        <td><input type="reset" name="Form" value="Nhập lại"</td>
                     </tr>
                 </table>
             </td>
